# grpc-python

./: .env.example  README.md  author_server.py  book_server.py  pyproject.toml
api_gateway/: api.py  config.py
clients/: author_client.py  book_client.py
db/: config.py
db/entities/: __init__.py  mixin.py
db/entities/models/: author.py  book.py
db/repositories/: author.py  base.py  book.py
db/settings/: db_config.py
protos/: author.proto  author_pb2.py  author_pb2.pyi  author_pb2_grpc.py  book.proto  book_pb2.py  book_pb2.pyi  book_pb2_grpc.py
schemas/: book.py
services/: author.py  book.py
